fix: 오토레이아웃 수정

--- a/WebBrowser/WebBrowser/Base.lproj/Main.storyboard
+++ b/WebBrowser/WebBrowser/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bJB-cl-Jtc">
-                                <rect key="frame" x="0.0" y="88" width="390" height="673"/>
+                                <rect key="frame" x="0.0" y="84" width="390" height="677"/>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -30,19 +30,19 @@
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="agh-2f-QVf"/>
-                                    <barButtonItem title="btnGoBack" image="arrow.left" catalog="system" width="125" id="ZRM-Dr-Abq" userLabel="Back Button">
+                                    <barButtonItem title="btnGoBack" image="arrow.left" catalog="system" id="ZRM-Dr-Abq" userLabel="Back Button">
                                         <connections>
                                             <action selector="touchUpBackButton:" destination="BYZ-38-t0r" id="7dv-p3-irc"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Ps2-in-AO7"/>
-                                    <barButtonItem title="btnReload" image="arrow.clockwise" catalog="system" width="125" id="ATP-vk-ZEC" userLabel="Reload Button">
+                                    <barButtonItem width="50" style="plain" systemItem="flexibleSpace" id="Ps2-in-AO7"/>
+                                    <barButtonItem title="btnReload" image="arrow.clockwise" catalog="system" id="ATP-vk-ZEC" userLabel="Reload Button">
                                         <connections>
                                             <action selector="touchUpReloadButton:" destination="BYZ-38-t0r" id="AnU-sP-KhW"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="SwR-Im-7N0"/>
-                                    <barButtonItem title="btnGoForward" image="arrow.right" catalog="system" width="125" id="XMd-lD-nUO" userLabel="Forward Button">
+                                    <barButtonItem width="50" style="plain" systemItem="flexibleSpace" id="SwR-Im-7N0"/>
+                                    <barButtonItem title="btnGoForward" image="arrow.right" catalog="system" id="XMd-lD-nUO" userLabel="Forward Button">
                                         <connections>
                                             <action selector="touchUpForwardButton:" destination="BYZ-38-t0r" id="Z4E-5a-fLN"/>
                                         </connections>
@@ -51,8 +51,8 @@
                                 </items>
                                 <color key="tintColor" name="AccentColor"/>
                             </toolbar>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AkT-oi-HMY">
-                                <rect key="frame" x="316" y="49" width="88" height="34"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AkT-oi-HMY">
+                                <rect key="frame" x="350" y="49" width="30" height="30"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="이동"/>
@@ -60,36 +60,33 @@
                                     <action selector="touchUpChangeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Q6A-AA-SoE"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kiu-wh-l17">
-                                <rect key="frame" x="10" y="49" width="298" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="VKU-qY-PDM"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="HRC-2m-vgY">
                                 <rect key="frame" x="185" y="412" width="20" height="20"/>
                             </activityIndicatorView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kiu-wh-l17">
+                                <rect key="frame" x="10" y="42" width="273" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Kiu-wh-l17" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.7" id="6VX-Ud-fZh"/>
                             <constraint firstItem="AkT-oi-HMY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="Abr-d7-5g2"/>
                             <constraint firstItem="bJB-cl-Jtc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HO3-Xu-IFL"/>
-                            <constraint firstItem="AkT-oi-HMY" firstAttribute="leading" secondItem="Kiu-wh-l17" secondAttribute="trailing" constant="10" id="M0B-5B-1ld"/>
                             <constraint firstItem="10J-sG-zVW" firstAttribute="top" secondItem="bJB-cl-Jtc" secondAttribute="bottom" id="NUs-pB-iV4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AkT-oi-HMY" secondAttribute="trailing" constant="10" id="OZX-sW-Zfd"/>
                             <constraint firstItem="10J-sG-zVW" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="RGq-4e-oXY"/>
+                            <constraint firstItem="Kiu-wh-l17" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="Wp7-5U-HXg"/>
+                            <constraint firstItem="Kiu-wh-l17" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="42" id="Zug-9C-5be"/>
                             <constraint firstItem="bJB-cl-Jtc" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="chH-bu-14M"/>
-                            <constraint firstItem="Kiu-wh-l17" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="giX-DU-WNy"/>
-                            <constraint firstItem="Kiu-wh-l17" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="iyr-w8-GAr"/>
                             <constraint firstItem="10J-sG-zVW" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="jJj-IS-8Ex"/>
                             <constraint firstItem="bJB-cl-Jtc" firstAttribute="top" secondItem="AkT-oi-HMY" secondAttribute="bottom" constant="5" id="jnK-Da-28W"/>
                             <constraint firstItem="HRC-2m-vgY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="juJ-Or-tIC"/>
                             <constraint firstItem="HRC-2m-vgY" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="nWG-LK-hOL"/>
                             <constraint firstItem="10J-sG-zVW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rkv-7Y-9M4"/>
-                            <constraint firstItem="bJB-cl-Jtc" firstAttribute="top" secondItem="Kiu-wh-l17" secondAttribute="bottom" constant="5" id="uYa-qi-exG"/>
+                            <constraint firstItem="bJB-cl-Jtc" firstAttribute="top" secondItem="Kiu-wh-l17" secondAttribute="bottom" constant="8" id="yFS-aU-aM5"/>
                         </constraints>
                     </view>
                     <connections>
@@ -102,7 +99,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="136.95652173913044"/>
+            <point key="canvasLocation" x="135.38461538461539" y="136.49289099526067"/>
         </scene>
     </scenes>
     <resources>
